# AutoCrusher

./: .dockerignore  .gitignore  Dockerfile  DummyClassifier.ipynb  LICENSE  README.md  agents.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_pipeline.py  tools.py
app/: __init__.py  main.py  state.py
app/controllers/: mitigation_controller.py  prediction_controller.py
app/routes/: mitigation.py  prediction.py
bias_pipeline_output/: fair_adult_model.pkl  fair_model.pkl
