[project]
name = "autodetecter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fairlearn>=0.14.0",
    "google-adk>=2.2.0",
    "joblib>=1.5.3",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "ruff>=0.15.18",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[tool.ruff]
exclude = [
    ".git",
    ".git-lookup",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.ipynb",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "SIM"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

